# cmf-bindings

./: README.md
c/: cmf.c  cmf.h  test.c
cpp/: CMakeLists.txt
cpp/streaming/: MessageBuilder.cpp  MessageBuilder.h  MessageParser.cpp  MessageParser.h
cpp/tests/: TestCMF.cpp
python/: compactmessageformat.py  runtests.py
